<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_last_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_prev_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_prev" />

            <Button
                android:id="@+id/button_next_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_next" />
        </LinearLayout>

        <EditText
            android:id="@+id/edittext_add_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_hint_story" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/button_send_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send" />

            <Button
                android:id="@+id/button_reject_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reject_story" />

            <Button
                android:id="@+id/button_replace_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_replace_story" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>