<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <Button
        android:id="@+id/button_new_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMenuButton"
        android:text="@string/button_new_story" />

    <Button
        android:id="@+id/button_get_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMenuButton"
        android:text="@string/button_get_story" />

    <Button
        android:id="@+id/button_my_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMenuButton"
        android:text="@string/button_my_stories" />

</LinearLayout>